--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^2.0.2",
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.10.9",
+    "canvas-confetti": "^1.6.0",
     "tailwindcss": "^3.3.3"
   }
 }
